--- a/1_myblog/myblog.html
+++ b/1_myblog/myblog.html
@@ -22,7 +22,7 @@
                     <div class="yui-u">
                         <div class="contact-info">
                             <!--h3><a id="pdf" href="#">Download PDF</a></h3-->
-                            <h3><a href="mailto:robin@openate.com">robin@openate.com</a></h3>
+                            <h3><a href="mailto:robin123@test.com">robin123@test.com</a></h3>
                             <h3>(0912) - 345678</h3>
                         </div>
                         <!--// .contact-info -->
